# agentscanner

./: .gitignore  404.html  DESIGN.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api-reference/: index.html
architecture/: index.html
checks/: index.html
ci-integration/: index.html
contributing/: index.html
docs/: api-reference.md  architecture.md  checks.md  ci-integration.md  contributing.md  hardened-baseline.md  index.md
hardened/: README.md  settings.json
hardened-baseline/: index.html
search/: search_index.json
src/agentscan/: __init__.py  cli.py  discovery.py
src/agentscan/checks/: __init__.py  agentic_skills_ast.py  agents_skills.py  env_secrets.py  hooks.py  mcp.py  prompts.py
src/agentscan/parsers/: json_parser.py  markdown_parser.py
src/agentscan/reporters/: __init__.py  cli.py  json.py  sarif.py
src/agentscanner/: __init__.py  cli.py  data.py  engine.py  models.py
src/agentscanner/checks/: base.py  hooks.py  permissions.py
src/agentscanner/parsers/: __init__.py  json_parser.py  markdown_parser.py
src/agentscanner/reporters/: json.py  sarif.py
stylesheets/: extra.css
tests/: test_checks.py
tests/fixtures/bad/: .mcp.json  CLAUDE.md
tests/fixtures/bad/.claude/: settings.json
tests/fixtures/bad/.claude/agents/: rogue.md
tests/fixtures/bad/.claude/skills/: evil_skill.md
tests/fixtures/good/: .mcp.json
tests/fixtures/good/.claude/: settings.json
tests/fixtures/good/.claude/agents/: helper.md
tests/fixtures/good/.claude/skills/: good_skill.md
